--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,22 @@
     <head>
         <style>
         button {
-            height: 30px;
-            width: 30px;
-            outline: none;
+          height: 30px;
+          width: 150px;
+          outline: none;
+        }
+        select {
+          margin-bottom: 10px;
+          width: 100px;
         }
         </style>
     </head>
     <body>
-        <button id="changeColor"></button>
-        <!-- <script src="popup.js"></script> -->
+        <select>
+          <option value="1">Wim</option>
+          <option value="2">Dimitri</option>
+        </select>
+        <button id="increaseScore">Squashed a fly</button>
+        <script src="popup.js"></script>
     </body>
   </html>
