basic logic working

--- a/popup.html
+++ b/popup.html
@@ -14,11 +14,13 @@
         </style>
     </head>
     <body>
-        <select>
+        <select id="player">
           <option value="1">Wim</option>
           <option value="2">Dimitri</option>
         </select>
         <button id="increaseScore">Squashed a fly</button>
+
+        <script src="jquery-3.4.1.min.js"></script>
         <script src="popup.js"></script>
     </body>
   </html>
