can save api address and increase score

--- a/options.html
+++ b/options.html
@@ -12,8 +12,8 @@
         <div id="content">
             <form action="#">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input id="ipAddress" class="mdl-textfield__input" type="text" name="ipAddress" value="localhost">
-                    <label class="mdl-textfield__label" for="ipAddress">Server ip address</label>
+                    <input id="apiAddress" class="mdl-textfield__input" type="text" name="apiAddress" value="localhost">
+                    <label class="mdl-textfield__label" for="apiAddress">Server ip address</label>
                 </div>
             </form>
             <button id="save" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary">
