extracted styles to stylesheet

--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <style>
-        #content {
-          width: 155px;
-          height: 70px;
-          padding: 25px;
-        }
-        button {
-          outline: none;
-        }
-        select {
-          margin-bottom: 10px;
-          width: 100px;
-        }
-        #score {
-          margin-left: 10px;
-          display: inline;
-        }
-      </style>
+      <meta charset="UTF-8">
+      <title>Flies</title>
+
+      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
       <link rel="stylesheet" type="text/css" href="mdl/material.min.css">
+      <link rel="stylesheet" href="popup.css">
     </head>
     <body>
       <div id="content">
