added link to webapp in html

--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,18 @@
     </head>
     <body>
       <div id="content">
-        <select id="player"></select>
-        <p id="score"></p>
-        <br/>
+        <div id="playerSelection">
+          <select id="player"></select>
+          <p id="score"></p>
+        </div>
+
         <button id="increaseScore" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary">
           Squashed a fly
         </button>
+
+        <div id="footer">
+          <a id="webAppLink" href="#" target="_blank">Web-app</a>
+        </div>
       </div>
 
       <script src="jquery-3.4.1.min.js"></script>
